new URI instead of new URL, motherless, nfsfw.